Corrige nomes de metodos e adiciona modelMapper